--- a/p1-b-final.ipynb
+++ b/p1-b-final.ipynb
@@ -87,11 +87,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 请在这里输入代码"
+    "print(\"Hi,what is your name?\")\n",
+    "name = input()\n",
+    "print(f'Hello,{name}')"
    ]
   },
   {
@@ -103,11 +105,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 请在这里输入代码"
+    "print(\"How are you today?\")\n",
+    "feeling = input()\n",
+    "if 'good' in feeling:\n",
+    "    print(\"I'm feeling good too\")\n",
+    "else:\n",
+    "    print(\"Sorry to hear that\")"
    ]
   },
   {
@@ -119,11 +126,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "How are you today?\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " Good\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I'm feeling good too\n"
+     ]
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "print(\"How are you today?\")\n",
+    "feeling = input()\n",
+    "if 'good' in feeling.lower():\n",
+    "    print(\"I'm feeling good too\")\n",
+    "else:\n",
+    "    print(\"Sorry to hear that\")"
    ]
   },
   {
@@ -135,11 +169,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "What's your favorite color?\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " blue\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You like blue?My favorite color is red\n"
+     ]
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "import random\n",
+    "\n",
+    "print(\"What's your favorite color?\")\n",
+    "favcolor = input()\n",
+    "colors = ['red', 'orange', 'yellow', 'green', 'blue', 'indigo', 'purple']\n",
+    "print(f\"You like {favcolor.lower()}?My favorite color is {random.choice(colors)}\")\n"
    ]
   },
   {
@@ -191,11 +252,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 请在这里输入代码"
+    "import time\n",
+    "\n",
+    "class Bot:\n",
+    "\n",
+    "    wait = 1\n",
+    "\n",
+    "    def __init__(self):\n",
+    "        self.q = ''\n",
+    "        self.a = ''\n",
+    "\n",
+    "    def _think(self, s):\n",
+    "        return s\n",
+    "\n",
+    "    def run(self):\n",
+    "        time.sleep(Bot.wait)\n",
+    "        print(self.q)\n",
+    "        self.a = input()\n",
+    "        time.sleep(Bot.wait)\n",
+    "        print(self._think(self.a))"
    ]
   },
   {
@@ -214,29 +293,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 请在这里输入代码"
+    "class HelloBot(Bot):\n",
+    "    def __init__(self):\n",
+    "        self.q = \"Hi, what is your name?\"\n",
+    "\n",
+    "    def _think(self, s):\n",
+    "        return f\"Hello {s}\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 请在这里输入代码"
+    "class GreetingBot(Bot):\n",
+    "    def __init__(self):\n",
+    "        self.q = \"How are you today?\"\n",
+    "\n",
+    "    def _think(self, s):\n",
+    "        if 'good' in s.lower() or 'fine' in s.lower():\n",
+    "            return \"I'm feeling good too\"\n",
+    "        else:\n",
+    "            return \"Sorry to hear that\"    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 请在这里输入代码"
+    "import random\n",
+    "\n",
+    "class FavoriteColorBot(Bot):\n",
+    "    def __init__(self):\n",
+    "        self.q = \"What's your favorite color?\"\n",
+    "\n",
+    "    def _think(self, s):\n",
+    "        colors = ['red', 'orange', 'yellow', 'green', 'blue', 'indigo', 'purple']\n",
+    "        return f\"You like {s.lower()}? My favorite color is {random.choice(colors)}\"\n",
+    "    "
    ]
   },
   {
@@ -252,11 +353,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 请在这里输入代码"
+    "class Garfield:\n",
+    "    \n",
+    "    def __init__(self, wait=0.1):\n",
+    "        Bot.wait = wait\n",
+    "        self.bots = []\n",
+    "\n",
+    "    def add(self, bot):\n",
+    "        self.bots.append(bot)\n",
+    "\n",
+    "    def _prompt(self, s):\n",
+    "        print(s)\n",
+    "        print()\n",
+    "\n",
+    "    def run(self):\n",
+    "        self._prompt(\"This is Garfield dialog system. Let's talk.\")\n",
+    "        for bot in self.bots:\n",
+    "            bot.run()"
    ]
   },
   {
@@ -274,11 +391,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This is Garfield dialog system. Let's talk.\n",
+      "\n",
+      "Hi, what is your name?\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " eva\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello eva\n",
+      "How are you today?\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " good\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I'm feeling good too\n",
+      "What's your favorite color?\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " red\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You like red? My favorite color is red\n"
+     ]
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "# 创建一个聊天延时 1s 的对话系统\n",
+    "garfield = Garfield()\n",
+    "# 向其中加入我们已经定义好的各个对话 bot 的对象实例\n",
+    "garfield.add(HelloBot())\n",
+    "garfield.add(GreetingBot())\n",
+    "garfield.add(FavoriteColorBot())\n",
+    "# 运行之\n",
+    "garfield.run()"
    ]
   },
   {
@@ -320,11 +498,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 请在这里输入代码"
+    "from time import sleep\n",
+    "from termcolor import colored\n",
+    "\n",
+    "class Bot:\n",
+    "\n",
+    "    wait = 1\n",
+    "\n",
+    "    def __init__(self):\n",
+    "        self.q = ''\n",
+    "        self.a = ''\n",
+    "\n",
+    "    def _think(self, s):\n",
+    "        return s\n",
+    "\n",
+    "    def _format(self, s):\n",
+    "        return colored(s, 'blue')\n",
+    "\n",
+    "    def run(self):\n",
+    "        sleep(Bot.wait)\n",
+    "        print(self._format(self.q))\n",
+    "        self.a = input()\n",
+    "        sleep(Bot.wait)\n",
+    "        print(self._format(self._think(self.a)))"
    ]
   },
   {
@@ -352,11 +552,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 请在这里输入代码"
+    "from simpleeval import simple_eval\n",
+    "\n",
+    "class CalcBot(Bot):\n",
+    "    def __init__(self):\n",
+    "        self.q = \"Through recent upgrade I can do calculation now. Input some arithmetic expression to try:\"\n",
+    "\n",
+    "    def _think(self, s):\n",
+    "        result = simple_eval(s)\n",
+    "        return f\"Done. Result = {result}\""
    ]
   },
   {
@@ -368,11 +576,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This is Garfield dialog system. Let's talk.\n",
+      "\n",
+      "Hi, what is your name?\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " eva\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello eva\n",
+      "\u001b[34mThrough recent upgrade I can do calculation now. Input some arithmetic expression to try:\u001b[0m\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " 3+3+3\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[34mDone. Result = 9\u001b[0m\n"
+     ]
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "garfield = Garfield()\n",
+    "garfield.add(HelloBot())\n",
+    "garfield.add(CalcBot())\n",
+    "garfield.run()"
    ]
   },
   {
@@ -440,11 +690,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 请在这里输入代码"
+    "garfield = Garfield()\n",
+    "garfield.add(HelloBot())\n",
+    "garfield.add(CalcBot())\n",
+    "\n",
+    "\n",
+    "while True: \n",
+    "    garfield.run()\n",
+    "    Garfield()._prompt(\"continue talking?\")\n",
+    "    s = input()\n",
+    "    if s in ('q','x','exit'):\n",
+    "        break\n",
+    "    pass\n",
+    "        "
    ]
   },
   {
@@ -460,20 +722,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 请在这里输入代码"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 请在这里输入代码"
+    "from time import sleep\n",
+    "from termcolor import colored\n",
+    "\n",
+    "class Bot:\n",
+    "\n",
+    "    wait = 1\n",
+    "    runType = 'once'\n",
+    "\n",
+    "    def __init__(self,runType = 'once'):\n",
+    "        self.q = ''\n",
+    "        self.a = ''\n",
+    "        Bot.runType = runType\n",
+    "\n",
+    "    def _think(self, s):\n",
+    "        return s\n",
+    "\n",
+    "    def _format(self, s):\n",
+    "        return colored(s, 'blue')\n",
+    "\n",
+    "    def run(self):\n",
+    "        while True:\n",
+    "            sleep(Bot.wait)\n",
+    "            print(self._format(self.q))\n",
+    "            self.a = input()\n",
+    "            if a in ('q','x','exit'):\n",
+    "                break\n",
+    "            sleep(Bot.wait)\n",
+    "            print(self._format(self._think(self.a)))\n",
+    "            if runType == 'once':\n",
+    "                break"
    ]
   },
   {
@@ -485,29 +767,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 请在这里输入代码"
+    "class HelloBot(Bot):\n",
+    "    def __init__(self,runType = 'once'):\n",
+    "        super().__init__(runType)\n",
+    "        self.q = \"Hi, what is your name?\"\n",
+    "\n",
+    "    def _think(self, s):\n",
+    "        return f\"Hello {s}\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 请在这里输入代码"
+    "class GreetingBot(Bot):\n",
+    "    def __init__(self,runType = 'once'):\n",
+    "        super().__init__(runType)\n",
+    "        self.q = \"How are you today?\"\n",
+    "\n",
+    "    def _think(self, s):\n",
+    "        if 'good' in s.lower() or 'fine' in s.lower():\n",
+    "            return \"I'm feeling good too\"\n",
+    "        else:\n",
+    "            return \"Sorry to hear that\"    \t"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 请在这里输入代码"
+    "class FavoriteColorBot(Bot):\n",
+    "    def __init__(self,runType = 'once'):\n",
+    "        super().__init__(runType)\n",
+    "        self.q = \"What's your favorite color?\"\n",
+    "\n",
+    "    def _think(self, s):\n",
+    "        colors = ['red', 'orange', 'yellow', 'green', 'blue', 'indigo', 'purple']\n",
+    "        return f\"You like {s.lower()}? My favorite color is {random.choice(colors)}\"\t"
    ]
   },
   {
@@ -521,11 +825,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 请在这里输入代码"
+    "from simpleeval import simple_eval\n",
+    "\n",
+    "class CalcBot(Bot):\n",
+    "    def __init__(self,runType = 'once'):\n",
+    "        super().__init__(runType)\n",
+    "        self.q = \"Through recent upgrade I can do calculation now. Input some arithmetic expression to try:\"\n",
+    "\n",
+    "    def _think(self, s):\n",
+    "        result = simple_eval(s)\n",
+    "        return f\"Done. Result = {result}\""
    ]
   },
   {
@@ -537,11 +850,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 请在这里输入代码"
+    "garfield = Garfield()\n",
+    "garfield.add(HelloBot(0.1,'once'))\n",
+    "garfield.add(CalcBot(0.1,'loop'))\n",
+    "\n",
+    "\n",
+    "while True: \n",
+    "    garfield.run()\n",
+    "    Garfield()._prompt(\"continue talking?\")\n",
+    "    s = input()\n",
+    "    if s in ('q','x','exit'):\n",
+    "        break\n"
    ]
   },
   {
@@ -554,7 +877,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
