Fix hint in CalcBot

--- a/p1-b-final.ipynb
+++ b/p1-b-final.ipynb
@@ -835,6 +835,8 @@
     "    def __init__(self,runType = 'once'):\n",
     "        super().__init__(runType)\n",
     "        self.q = \"Through recent upgrade I can do calculation now. Input some arithmetic expression to try:\"\n",
+    "        if self.runType == 'loop'\n",
+    "            self.q = self.q + \"Type'quit','x','q' to quit.\"\n",
     "\n",
     "    def _think(self, s):\n",
     "        result = simple_eval(s)\n",
@@ -891,7 +893,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.10.1"
   }
  },
  "nbformat": 4,
