--- a/p1-a-string.ipynb
+++ b/p1-a-string.ipynb
@@ -80,7 +80,7 @@
    "source": [
     "我国颁布于 1993 年的 GB13000 就是字符集标准，和 UCS-2 兼容；而 2005 年颁布的 GB18030 则是编码标准，这个标准采用单、双和四字节的变长编码方案，单字节兼容 ASCII 码，双字节兼容 GB2312-1980 和 GBK 汉字编码，而四字节部分处理不太常用的汉字和少数民族文字。GB18030 是强制标准，所有在中国出售的软件系统和服务都必须支持。\n",
     "\n",
-    "另一个我们常用的编码方式是 UTF-8，同样采用变长方案，英文采用单字节编码，与 ASCII 兼容，西欧其他语言的字符采用双字节编码，常用汉字采用三字节编码，罕用字符采用四字节编码。UTF-8 对中文用户来说，汉字编码比 GB18030 多用一个字节，体积要增加 50%，不过仍然是支持最广泛的事实标准。\n",
+    "另一个我们常用的编码方式是 UTF-8，同样采用变长方案，英文采用单字节编码，与 ASCII 兼容，西欧其他语言的字符采用双字节编码，常用汉字采用三字节编码，罕用字符采用四字节编码。UTF-8 对中文用户来说，汉字编码比 GB18030 多用一个字节，体积要增加 50%，不过仍然是支持最广泛的实施标准。\n",
     "\n",
     "很多现代编辑器都提供转码功能，可以在这些主流编码之间方便的转换。从最大限度兼容的角度，一般都会使用 UTF-8 编码，无论是源代码还是文档。\n",
     "\n",
@@ -209,7 +209,7 @@
    "source": [
     "上面的代码里我们看到了一个奇怪的东西 `\\n`，关于这个有几点知识：\n",
     "\n",
-    "* 字符串值里反斜线 `\\` 加一个字符这种东西叫“转义符（*escape character*）”，代表一个特殊字符或者特殊指令（告诉解释器后面的字符如何理解），Python 解释器会在处理时自动翻译或处理；Python 支持的转义符列表可以参考 [这里](http://python-ds.com/python-3-escape-sequences)，所以不管我们用单引号还是双引号都可以在字符值里用 `\\\"` `\\'` 来输入需要的引号；如果我们想输入 `\\` 怎么办？聪明人立刻就能想到，用 `\\\\` 就可以了；\n",
+    "* 字符串值里反斜线 `\\` 加一个字符这种东西叫“转义符（*escape character*）”，代表一个特殊字符或者特殊指令（告诉解释器后面的字符如何理解），Python 解释器会在处理时自动翻译或处理；Python 支持的转义符列表可以参考 [这里](http://www.python-ds.com/python-3-escape-sequences)，所以不管我们用单引号还是双引号都可以在字符值里用 `\\\"` `\\'` 来输入需要的引号；如果我们想输入 `\\` 怎么办？聪明人立刻就能想到，用 `\\\\` 就可以了；\n",
     "* 转义符 `\\n` 代表一个特殊字符，也就是 ASCII 里的换行（*LF*, *linefeed*）符；ASCII 里还有个回车（*CR*, *carriage return*）符，可以用 `\\r` 表示；回车换行的概念来自老式打字机，打字机打完一行需要按两个功能键，一个是回车，即移动滑轨让打字位置回到行首，另一个是换行，即走纸一行让打字位置走到下一行空白处；在计算机时代我们敲击键盘的换行（↩︎, Return）键就能完成这两个工作；\n",
     "* 如果在字符串前面写一个小写的 `r`，意思是 *raw*，就是告诉 Python 解释器这个字符串不要做任何转义处理，里面所有的 `\\` 就是 `\\` 字符，没有特殊含义，这种特殊标记的字符串有时候会有用，比如处理文件路径，或者正则表达式，后面我们会遇到的。\n",
     "\n",
